--- a/templates/areas.html
+++ b/templates/areas.html
@@ -5,7 +5,7 @@
             <h2>Human-Computer Interaction</h2>
         </div>
     </section>
-    <section>
+    <section class="games">
         <div class="overlay-box"> 
             <h2>Games</h2>
         </div>
@@ -15,27 +15,27 @@
             <h2>Virtual Reality</h2>
         </div>
     </section>
-    <section>
+    <section class="cyber">
         <div class="overlay-box"> 
-            <h2>Systems</h2>
+            <h2>Cybersecurity</h2>
         </div>
     </section>
-    <section>
+    <section class="ai">
         <div class="overlay-box"> 
             <h2>AI & Machine Learning</h2>
         </div>
     </section>
-    <section>
+    <section class="robotics">
         <div class="overlay-box"> 
             <h2>Robotics</h2>
         </div>
     </section>
-    <section>
+    <section class="swe">
         <div class="overlay-box"> 
             <h2>Software Development</h2>
         </div>
     </section>
-    <section>
+    <section class="theory">
         <div class="overlay-box"> 
             <h2>Theory</h2>
         </div>
