--- a/templates/main.html
+++ b/templates/main.html
@@ -1,5 +1,6 @@
-<h1>Home</h1>
-<p>Text text text text </p>
+<h1>Welcome to CSCI!</h1>
+<h2>Who We Are</h2>
+<p>What can you do with a degree in computer science? The question is, what can’t you do? As software engineers, visualization researchers, web developers, system administrators, college professors, and FBI agents, our alumni are shaping the digital landscape across a variety of fields. Our faculty are passionate about breakthrough technologies in the areas of artificial intelligence, data science, robotics, scientific modeling, virtual reality, and more. Our small classes and our liberal arts focus offer you ample opportunities to work alongside faculty on research projects and combine your computer science studies with other innovative areas, like engineering or new media.</p>
 
-<h2>Why UNCA?</h2>
-<p>Text text text text </p>
+<h2>What You'll Learn</h2>
+<p>The computer systems concentration prepares students for graduate studies in computer science and for careers in scientific and engineering applications, systems programming, and software development, while the information systems concentration prepares students for careers in commercial programming, systems analysis and design, and database management. Eligible students can receive funding, participate in research and fieldwork, and gain teaching experience through our Atmospheric and Computer Science Exploratory Scholars (ACES) Scholarship Program. Join us at UNC Asheville to start your career in computer science. </p>
