--- a/templates/areas.html
+++ b/templates/areas.html
@@ -1,6 +1,7 @@
 <h1>Areas of Computer Science</h1>
-<div id="areas">
-    <section class="hci">
+<p>Some text about the areas of computer science that students can learn more about.</p>
+<div class="areas">
+    <section class="hci" onclick="showLightbox('hci.html')">
         <div class="overlay-box"> 
             <h2>Human-Computer Interaction</h2>
         </div>
@@ -15,7 +16,7 @@
             <h2>Virtual Reality</h2>
         </div>
     </section>
-    <section class="cyber">
+    <section class="cyber" onclick="showLightbox('cybersecurity.html')">
         <div class="overlay-box"> 
             <h2>Cybersecurity</h2>
         </div>
@@ -40,7 +41,7 @@
             <h2>Theory</h2>
         </div>
     </section>
-    <section>
+    <section class="ds">
         <div class="overlay-box"> 
             <h2>Data Science</h2>
         </div>
