--- a/templates/hci.html
+++ b/templates/hci.html
@@ -1,2 +1,32 @@
-<h1>HCI</h1>
-<p>Text text text text </p>
+<div class="area-overview"><h1>Human-Computer Interaction (HCI)</h1>
+    <section class="overview">
+        <h2>Overview</h2>
+        <div>
+            <p>Human Computer Interaction (HCI) is a multidisciplinary field that considers how computing and information technologies interact with individuals, communities, and society. HCI originated in computer science as a way to develop more intuitive, user-friendly interfaces (e.g., the mouse, video chat, VR, etc.). However, modern HCI integrates research and perspectives from many disciplines, including (but not limited to) cognitive science, psychology, sociology, anthropology, public health, education, and critical theory.</p> 
+        </div>
+        <img src="https://picsum.photos/300/300?q=1" />
+    </section>
+    <section class="courses">
+        <h2>Courses</h2>
+        <img src="https://picsum.photos/300/300?q=2" />
+        <div>
+            <p>Many of the liberal arts course offerings across UNCA are relevant to HCI (e.g., learning about our individual and collective capacity to live and act in the world, and the role that computing can and does play) [list below].</p>
+            <p>In Computer Science, we offer courses that help students develop proficiency in programming, data analytics, and interface design [list below]. We encourage students to apply these skills to tackle real world challenges, and to think critically about the role of the tools they build in shaping the world.</p>
+            <p>TODO: Make a curated list of courses in CSCI, NM, and others.</p>
+        </div>
+    </section>
+    <section class="faculty">
+        <h2>Faculty</h2>
+        <div>
+            <p>Text text text text </p>
+        </div>
+        <img src="https://picsum.photos/300/300?q=3" />
+    </section>
+    <section class="student-work">
+        <h2>Student Work</h2>
+        <img src="https://picsum.photos/300/300?q=4" />
+        <div>
+            <p>Text text text text </p>
+        </div>
+    </section>
+</div>
