--- a/css/main.css
+++ b/css/main.css
@@ -110,6 +110,7 @@ footer {
         padding: 1vh 3vw;
         height: 70px;
         align-items: center;
+        box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);    
     }
     header h1, header h2 {
         font-size: 1.4em;
@@ -150,6 +151,7 @@ footer {
 
     nav.show ul {
         height: 256px;
+        box-shadow: 0px 7px 6px rgb(0 0 0 / 16%), 0px 6px 6px rgb(0 0 0 / 23%);
     }
     nav li {
         height: 40px;
