--- a/templates/cybersecurity.html
+++ b/templates/cybersecurity.html
@@ -1,2 +1,32 @@
-<h1>Cybersecurity</h1>
-<p>Text text text text </p>
+<div class="area-overview">
+    <h1>Cybersecurity</h1>
+    <section class="overview">
+        <h2>About</h2>
+        <div>
+            <p>
+                Why should you care about Cybersecurity?</p>
+
+            <p>Computers are all around us. Our laptops and phones may be obvious, but computers are now in everything
+                from doorbells to lightbulbs. Computers, like all systems, have vulnerabilities which can be exploited.
+                When a vulnerability is subjected to the right condition, it becomes a threat. When that threat is acted
+                upon, it becomes an incident.</p>
+
+            <p>Cybersecurity is about understanding those vulnerabilities, threats, and incidents. What tools are
+                available to protect yourself, your devices, and your privacy?</p>
+
+            <p>Jobs are currently in demand and are expected to grow
+                Information Security Analysts can expect to earn more than programmers
+                You, or someone you know may be affected by cybercrime.</p>
+        </div>
+        <img src="https://picsum.photos/300/300?q=1" />
+    </section>
+
+    <section class="courses">
+        <h2>Courses</h2>
+
+        <img src="https://picsum.photos/300/300?q=2\" />
+        <div>
+            <h3>CSCI 364 - Cybersecurity</h3> 
+            <p>Discusses the topic of security as it relates to computer systems. Topics covered include security policies, computer security management and risk assessment, secured network protocols, software security issues, ethical and legal aspects of cybersecurity.</p>
+        </div>
+</div>
