--- a/templates/hci.html
+++ b/templates/hci.html
@@ -4,7 +4,7 @@
         <div>
             <p>Human Computer Interaction (HCI) is a multidisciplinary field that considers how computing and information technologies interact with individuals, communities, and society. HCI originated in computer science as a way to develop more intuitive, user-friendly interfaces (e.g., the mouse, video chat, VR, etc.). However, modern HCI integrates research and perspectives from many disciplines, including (but not limited to) cognitive science, psychology, sociology, anthropology, public health, education, and critical theory.</p> 
         </div>
-        <img src="https://picsum.photos/300/300?q=1" />
+        <img src="../images/hci-square.jpg" />
     </section>
     <section class="courses">
         <h2>Courses</h2>
