--- a/templates/curriculum.html
+++ b/templates/curriculum.html
@@ -1,4 +1,14 @@
 <h1>Curriculum</h1>
+<nav class="curriculum-nav">
+    <ul>
+        <li><a href="#">Overview</a></li>
+        <li><a href="#">Sample Schedules</a></li>
+        <li><a href="#courses">Current Courses</a></li>
+    </ul>
+</nav>
+
+<link
+rel=alternate type=application/json+oembed href="https://csci.unca.edu/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fcsci.unca.edu%2Flearn%2Fcurrent-classes%2F">
 <p>The Computer Science major offers two concentrations: Computer Systems and Information Systems. Both draw from a common core of computer science courses but differ in emphasis. Both concentrations provide the student with preparation for a career in the computer field or the background necessary for studies at the graduate level.
 </p>
 
