--- a/templates/courses.html
+++ b/templates/courses.html
@@ -1,4 +1,4 @@
-<h1>Courses</h1>
+<h1>CS Courses</h1>
 <select id="term">
     <option value="2023/spring/">Spring 2023</option>
     <option value="2022/fall/">Fall 2022</option>
