--- a/templates/curriculum.html
+++ b/templates/curriculum.html
@@ -3,7 +3,7 @@
     <ul>
         <li><a href="#">Overview</a></li>
         <li><a href="#">Sample Schedules</a></li>
-        <li><a href="#courses">Current Courses</a></li>
+        <li><a href="#course-schedule">Course Schedule</a></li>
     </ul>
 </nav>
 
