--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ body * {
     box-sizing: border-box;
 }
 
-header {
+body > header {
     z-index: 100;
     position: fixed;
     width: 100%;
@@ -26,33 +26,33 @@ header {
     padding-right: 10vw;
 }
 
-header h1, header h2 {
+.logo h1, .logo h2 {
     font-size: 2em;
     font-weight: 300;
     margin: 0;
 }
 
-header h2 {
+.logo h2 {
     font-size: 1em;
 }
 
-nav ul {
+header nav ul {
     list-style: none;
     display: flex;
     justify-content: flex-end;
     margin: 0;
 }
-nav ul li {
+header nav ul li {
     margin-right: 15px;
 }
-nav a, nav a:link, nav a:hover, nav a:active {
+header nav a, nav a:link, nav a:hover, nav a:active {
     color: black;
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
     font-weight: 300;
     border-bottom: solid 2px transparent;
 }
-nav a:hover {
+header nav a:hover {
     color: #444;
     border-bottom: solid 2px black;
 }
