--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Lora', serif;
     margin: 0;
     overflow-y: scroll;
+    color: #444;
+}
+h1, h2, h3, h4 {
+    font-family: 'Poppins', sans-serif;
+    color: #000;
+}
+
+p, li {
+    line-height: 1.6em;
+    margin: 8px 0px;
 }
 
 body * {
