--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ body * {
     box-sizing: border-box;
 }
 
-body > header {
+.main-header {
     z-index: 100;
     position: fixed;
     width: 100%;
@@ -46,23 +46,23 @@ body > header {
     font-size: 1em;
 }
 
-header nav ul {
+.main-header nav ul {
     list-style: none;
     display: flex;
     justify-content: flex-end;
     margin: 0;
 }
-header nav ul li {
+.main-header nav ul li {
     margin-right: 15px;
 }
-header nav a, nav a:link, nav a:hover, nav a:active {
+nav a, nav a:link, nav a:hover, nav a:active {
     color: black;
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
     font-weight: 300;
     border-bottom: solid 2px transparent;
 }
-header nav a:hover {
+.main-header nav a:hover {
     color: #444;
     border-bottom: solid 2px black;
 }
@@ -115,18 +115,18 @@ footer {
         padding-right: 0;
     }
 }
-@media screen and (max-width: 900px) {
-    header {
+@media screen and (max-width: 1050px) {
+    .main-header {
         padding: 1vh 3vw;
         height: 70px;
         align-items: center;
         box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);    
     }
-    header h1, header h2 {
+    .logo h1, .logo h2 {
         font-size: 1.4em;
         font-weight: 400;
     }
-    header h2 {
+    .logo h2 {
         display: none;
     }
     .mobile {
