capstone stub added

--- a/css/course-schedule.css
+++ b/css/course-schedule.css
@@ -1,38 +1,64 @@
-#course-list {
+#course-list, #student-projects {
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 50px;
-    row-gap: 40px;
+    row-gap: 50px;
 }
 
-.courses header {
+#course-list p, 
+#course-list li {
+    line-height: 1.6em;
+    margin: 4px 0px;
+}
+
+.courses header,
+.projects header {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
     padding: 0px;
+    margin-bottom: 20px;
 }
 
-.courses select {
+.courses header h1 span {
+    font-weight: 300;
+    text-transform: none;
+}
+.courses header h1 span.delimiter {
+    font-weight: 500;
+    color: #999;
+    font-size: 24px;
+    display: inline-block;
+    margin: 0px 5px 0px 20px;
+}
+i.fa-solid.fa-chevron-right {
+    margin-left: -13px;
+}
+
+.courses select,
+.projects select {
     border: solid 1px #CCC;
     border-radius: 4px;
     margin-left: 40px;
     padding: 10px 25px;
-    font-size: 1.5em;
+    font-size: 1.2em;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
     background: url("http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png") white no-repeat 96% !important;
 }
   
-.courses select::-ms-expand { display: none; }
+.courses select::-ms-expand,
+.projects select::-ms-expand { display: none; }
 
 /* #course-list p {
     margin: 0;
 } */
 #course-list h2 {
-    margin-bottom: 18px;
+    margin-bottom: 10px;
     font-weight: 400;
     line-height: 1.2em;
+    font-size: 1.3em;
 }
 
 .fa-circle-check {
@@ -45,4 +71,11 @@
 
 strong {
     font-weight: 600;
+}
+
+section.course, section.project {
+    border: solid 1px #DDD;
+    padding: 25px;
+    margin: 2px;
+    border-radius: 4px;
 }
