--- a/css/slides.css
+++ b/css/slides.css
@@ -12,8 +12,8 @@
     width: 100%;
     height: 100%;
     flex: 1 0 100%;
-    padding-left: 5em;
-    padding-right: 5em;
+    /* padding-left: 5em;
+    padding-right: 5em; */
 }
 
 @media screen and (max-width: 900px) {
