--- a/templates/course-schedule.html
+++ b/templates/course-schedule.html
@@ -1,7 +1,13 @@
 <div class="courses">
 
     <header>
-        <h1>Course Schedule</h1>
+        <h1>Curriculum
+            <span class="delimiter">
+                <i class="fa-solid fa-chevron-right"></i>
+                <i class="fa-solid fa-chevron-right"></i>
+            </span> 
+            <span>Course Schedule</span>
+        </h1>
         <select id="term">
             <option value="2023/spring/">Spring 2023</option>
             <option value="2022/fall/">Fall 2022</option>
