--- a/templates/for-students.html
+++ b/templates/for-students.html
@@ -1,8 +1,10 @@
-<h1>For Students</h1>
-<p>A bunch of things can go here..</p>
-<ul>
-    <li><a href="#student-projects">Capstone Project</a></li>
-    <li>Student ACM Group</li>
-    <li>Learn about the major / minor (cross-link)</li>
-    <li>Featured student?</li>
-</ul>
+<div class="slide-content">
+    <h1>For Students</h1>
+    <p>A bunch of things can go here..</p>
+    <ul>
+        <li><a href="#student-projects">Capstone Project</a></li>
+        <li>Student ACM Group</li>
+        <li>Learn about the major / minor (cross-link)</li>
+        <li>Featured student?</li>
+    </ul>
+</div>
