--- a/templates/hci.html
+++ b/templates/hci.html
@@ -1,4 +1,5 @@
-<div class="area-overview"><h1>Human-Computer Interaction (HCI)</h1>
+<div class="area-overview">
+    <h1>Human-Computer Interaction (HCI)</h1>
     <section class="overview">
         <h2>Overview</h2>
         <div>
