--- a/templates/news.html
+++ b/templates/news.html
@@ -1,8 +1,10 @@
-<h1>News</h1>
-<p>Text text text text </p>
-<ul>
-    <li>Student events</li>
-    <li>Anytime a faculty member has something going on</li>
-    <li>Visiting talks</li>
-    <li>Student ACM group (meet on Monday at 5:30)</li>
-</ul>
+<div class="slide-content">
+    <h1>News</h1>
+    <p>Text text text text </p>
+    <ul>
+        <li>Student events</li>
+        <li>Anytime a faculty member has something going on</li>
+        <li>Visiting talks</li>
+        <li>Student ACM group (meet on Monday at 5:30)</li>
+    </ul>
+</div>
