--- a/templates/areas.html
+++ b/templates/areas.html
@@ -1,50 +1,52 @@
-<h1>Areas of Computer Science</h1>
-<p>Some text about the areas of computer science that students can learn more about.</p>
-<div class="areas">
-    <section class="hci" onclick="showLightbox('hci.html')">
-        <div class="overlay-box"> 
-            <h2>Human-Computer Interaction</h2>
-        </div>
-    </section>
-    <section class="games">
-        <div class="overlay-box"> 
-            <h2>Games</h2>
-        </div>
-    </section>
-    <section class="vr">
-        <div class="overlay-box"> 
-            <h2>Virtual Reality</h2>
-        </div>
-    </section>
-    <section class="cyber" onclick="showLightbox('cybersecurity.html')">
-        <div class="overlay-box"> 
-            <h2>Cybersecurity</h2>
-        </div>
-    </section>
-    <section class="ai">
-        <div class="overlay-box"> 
-            <h2>AI & Machine Learning</h2>
-        </div>
-    </section>
-    <section class="robotics">
-        <div class="overlay-box"> 
-            <h2>Robotics</h2>
-        </div>
-    </section>
-    <section class="swe">
-        <div class="overlay-box"> 
-            <h2>Software Development</h2>
-        </div>
-    </section>
-    <section class="theory">
-        <div class="overlay-box"> 
-            <h2>Theory</h2>
-        </div>
-    </section>
-    <section class="ds">
-        <div class="overlay-box"> 
-            <h2>Data Science</h2>
-        </div>
-    </section>
+<div class="slide-content">
+    <h1>Areas of Computer Science</h1>
+    <p>Some text about the areas of computer science that students can learn more about.</p>
+    <div class="areas">
+        <section class="hci" onclick="showLightbox('hci.html')">
+            <div class="overlay-box">
+                <h2>Human-Computer Interaction</h2>
+            </div>
+        </section>
+        <section class="games">
+            <div class="overlay-box">
+                <h2>Games</h2>
+            </div>
+        </section>
+        <section class="vr">
+            <div class="overlay-box">
+                <h2>Virtual Reality</h2>
+            </div>
+        </section>
+        <section class="cyber" onclick="showLightbox('cybersecurity.html')">
+            <div class="overlay-box">
+                <h2>Cybersecurity</h2>
+            </div>
+        </section>
+        <section class="ai">
+            <div class="overlay-box">
+                <h2>AI & Machine Learning</h2>
+            </div>
+        </section>
+        <section class="robotics">
+            <div class="overlay-box">
+                <h2>Robotics</h2>
+            </div>
+        </section>
+        <section class="swe">
+            <div class="overlay-box">
+                <h2>Software Development</h2>
+            </div>
+        </section>
+        <section class="theory">
+            <div class="overlay-box">
+                <h2>Theory</h2>
+            </div>
+        </section>
+        <section class="ds">
+            <div class="overlay-box">
+                <h2>Data Science</h2>
+            </div>
+        </section>
 
+    </div>
 </div>
