--- a/templates/curriculum.html
+++ b/templates/curriculum.html
@@ -1,62 +1,75 @@
-<h1>Curriculum</h1>
-<nav class="curriculum-nav">
-    <ul>
-        <li><a href="#">Overview</a></li>
-        <li><a href="#">Sample Schedules</a></li>
-        <li><a href="#course-schedule">Course Schedule</a></li>
-    </ul>
-</nav>
+<div class="slide-content">
+    <h1>Degree Requirements</h1>
+    <nav class="curriculum-nav">
+        <ul>
+            <li><a href="#">Overview</a></li>
+            <li><a href="#">Sample Schedules</a></li>
+            <li><a href="#course-schedule">Course Schedule</a></li>
+        </ul>
+    </nav>
 
-<link
-rel=alternate type=application/json+oembed href="https://csci.unca.edu/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fcsci.unca.edu%2Flearn%2Fcurrent-classes%2F">
-<p>The Computer Science major offers two concentrations: Computer Systems and Information Systems. Both draw from a common core of computer science courses but differ in emphasis. Both concentrations provide the student with preparation for a career in the computer field or the background necessary for studies at the graduate level.
-</p>
+    <link rel=alternate type=application/json+oembed
+        href="https://csci.unca.edu/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fcsci.unca.edu%2Flearn%2Fcurrent-classes%2F">
+    <p>The Computer Science major offers two concentrations: Computer Systems and Information Systems. Both draw from a
+        common core of computer science courses but differ in emphasis. Both concentrations provide the student with
+        preparation for a career in the computer field or the background necessary for studies at the graduate level.
+    </p>
 
-<p>The core courses focus on the fundamentals of computing—data structures, computer architecture, system software and software engineering, database management and operating systems. Optional courses range from VLSI design and computer networking to graphical user interfaces and object technology.</p>
-    
-<p>The <strong>Computer Systems</strong> concentration covers hardware and software design and prepares students for careers in scientific and engineering applications, systems programming, computer architecture design and software development.</p>
-    
-<p>The <strong>Information Systems</strong> concentration focuses on the theory and application of software development, with emphasis on data processing applications, and prepares students for careers in commercial programming, systems analysis and design, and database management.</p>
-<div class="curriculum">
-    <section>
-        <div>
-            <h2>CSCI Minor</h2>
-            <p>21 credit hours</p>
-            <ul>
-                <li>4 required courses from the CSCI core</li>
-                <li>3 CSCI electives at the 300-level</li>
-            </ul>
-        </div>
-        <a class="more" href="http://catalog.unca.edu/preview_program.php?catoid=19&poid=3662&returnto=1162" target="_blank">More Info</a>
-    </section>
-    <section>
-        <div>
-            <h2>Information Systems Major</h2>
-            <p>38 credit hours</p>
-            <ul>
-                <li>12 CSCI course courses</li>
-                <li>2 CSCI electives at the 300-level</li>
-                <li>Calculus I</li>
-                <li>Discrete Math</li>
-                <li>Statistics</li>
-            </ul>
-        </div>
-        <a class="more" href="http://catalog.unca.edu/preview_program.php?catoid=19&poid=3664&returnto=1162" target="_blank">More Info</a>
-    </section>
-    <section>
-        <div>
-            <h2>Computer Systems Major</h2>
-            <p>41 credit hours</p>
-            <ul>
-                <li>13 CSCI course courses</li>
-                <li>2 CSCI electives at the 300-level</li>
-                <li>Calculus I</li>
-                <li>Discrete Math</li>
-                <li>Physics I</li>
-                <li>Physics II</li>
-                <li>2-3 additional math courses</li>
-            </ul>
-        </div>
-        <a class="more" href="http://catalog.unca.edu/preview_program.php?catoid=19&poid=3663&returnto=1162" target="_blank">More Info</a>
-    </section>
+    <p>The core courses focus on the fundamentals of computing—data structures, computer architecture, system software
+        and software engineering, database management and operating systems. Optional courses range from VLSI design and
+        computer networking to graphical user interfaces and object technology.</p>
+
+    <p>The <strong>Computer Systems</strong> concentration covers hardware and software design and prepares students for
+        careers in scientific and engineering applications, systems programming, computer architecture design and
+        software development.</p>
+
+    <p>The <strong>Information Systems</strong> concentration focuses on the theory and application of software
+        development, with emphasis on data processing applications, and prepares students for careers in commercial
+        programming, systems analysis and design, and database management.</p>
+    <div class="curriculum">
+        <section>
+            <div>
+                <h2>CSCI Minor</h2>
+                <p>21 credit hours</p>
+                <ul>
+                    <li>4 required courses from the CSCI core</li>
+                    <li>3 CSCI electives at the 300-level</li>
+                </ul>
+            </div>
+            <a class="more" href="http://catalog.unca.edu/preview_program.php?catoid=19&poid=3662&returnto=1162"
+                target="_blank">More Info</a>
+        </section>
+        <section>
+            <div>
+                <h2>Information Systems Major</h2>
+                <p>38 credit hours</p>
+                <ul>
+                    <li>12 CSCI course courses</li>
+                    <li>2 CSCI electives at the 300-level</li>
+                    <li>Calculus I</li>
+                    <li>Discrete Math</li>
+                    <li>Statistics</li>
+                </ul>
+            </div>
+            <a class="more" href="http://catalog.unca.edu/preview_program.php?catoid=19&poid=3664&returnto=1162"
+                target="_blank">More Info</a>
+        </section>
+        <section>
+            <div>
+                <h2>Computer Systems Major</h2>
+                <p>41 credit hours</p>
+                <ul>
+                    <li>13 CSCI course courses</li>
+                    <li>2 CSCI electives at the 300-level</li>
+                    <li>Calculus I</li>
+                    <li>Discrete Math</li>
+                    <li>Physics I</li>
+                    <li>Physics II</li>
+                    <li>2-3 additional math courses</li>
+                </ul>
+            </div>
+            <a class="more" href="http://catalog.unca.edu/preview_program.php?catoid=19&poid=3663&returnto=1162"
+                target="_blank">More Info</a>
+        </section>
+    </div>
 </div>
