--- a/css/curriculum.css
+++ b/css/curriculum.css
@@ -6,13 +6,13 @@
 .curriculum-container h1 {
     grid-column: 1 / 3;
 }
-.curriculum {
+/* .curriculum {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     column-gap: 30px;
     row-gap: 30px;
     margin-top: 50px;
-}
+} */
 .curriculum h2 {
     font-size: 1.2em;
     font-weight: 500;
@@ -55,13 +55,14 @@
 } */
 
 .curriculum > section {
-    background: #f9f9f9;
+    /* background: #f9f9f9;
     padding: 10px 15px 15px 15px;
     border-radius: 4px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: flex-start; */
+    margin: 80px 0px;
 }
 
 .curriculum ul {
