--- a/templates/people.html
+++ b/templates/people.html
@@ -1,2 +1,4 @@
-<h1>People</h1>
-<p>Text text text text </p>
+<div class="slide-content ">
+    <h1>People</h1>
+    <p>Text text text text </p>
+</div>
