--- a/css/main.css
+++ b/css/main.css
@@ -139,7 +139,7 @@ footer {
         padding-left: 5vw;
         padding-right: 5vw;
     }
-    nav ul {
+    .main-header nav ul {
         height: 0px;
         overflow: hidden;
         display: flex;
@@ -155,21 +155,29 @@ footer {
         padding: 0;
     }
 
-    nav.show ul {
-        height: 256px;
+    .main-header nav.show ul {
+        height: auto;
         box-shadow: 0px 7px 6px rgb(0 0 0 / 16%), 0px 6px 6px rgb(0 0 0 / 23%);
     }
-    nav li {
-        height: 40px;
+    .main-header nav li {
+        height: 30px;
         display: flex;
         align-items: center;
         padding: 0px 3vw;
+        /* border: solid 1px #000; */
     }
-    nav li a {
+    .main-header nav li:last-child {
+        margin-bottom: 30px;
+
+    }
+    .main-header nav li a {
         width: 100%;
+        border: solid 0px transparent;
+        height: 20px;
     } 
-    nav li a:hover {
-        border: solid 2px transparent;
+    .main-header nav li a:hover {
+        border: solid 0px transparent;
         font-weight: 600;
+        color: #444;
     }
 }
