--- a/templates/curriculum.html
+++ b/templates/curriculum.html
@@ -76,7 +76,7 @@
         <ul>
             <li><a href="#">Overview</a></li>
             <li><a href="#">Sample Schedules</a></li>
-            <li><a href="#course-schedule">Course Schedule</a></li>
+            <li><a href="#courses">Course Schedule</a></li>
             <li><a href="#student-projects">Capstone Project</a></li>
         </ul>
     </aside>
