--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+:root {
+    --bulldog-blue: #003DA5;
+    --evening-blue: #0076A5;
+    --sky-blue: #4298B5;
+    --bright-blue: #71B2C9;
+    --morning-blue: #AFCDD7;
+    --daybreak-blue: #C6D6E3;
+    --light-blue: #D1DDE6;
+    --forest: #7F9C90;
+    --river: #3F6C7D;
+    --night-sky: #003865;
+    --frost-gray: #D9D9D6;
+    --steel-gray: #C8C9C7;
+    --stone-gray: #888B8D;
+    --honeybee: #EBBC4E;
+    --autumn: #E6A65D;
+    --clay: #C26E60;
+    --banner-text-color: white;
+    --banner-bg-color: #003865;
+    --gold: #BD9B60;
+    --chestnut: #7C4D3A;
+    --maple: #A6192E;
+    --banner-one-height: 50px;
+    --banner-two-height: 120px;
+    --main-margin: 170px;
 
+}
 body {
     font-family: 'Lora', serif;
     margin: 0;
@@ -19,21 +45,58 @@ p, li {
 body * {
     box-sizing: border-box;
 }
+#unca {
+    padding-left: 5vw;
+    padding-right: 10vw;
+    z-index: 100;
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    background-color: var(--bulldog-blue);
+    height: var(--banner-one-height);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.button {
+    background: transparent;
+    /* font-weight: bold; */
+    font-family: 'Poppins', sans-serif;
+    border: solid 2px white !important;
+    color: white;
+    padding: 2px 12px;
+    text-decoration: none;
+}
+
+.unca-logo {
+    height: 70%;
+    width: auto;
+}
 
 .main-header {
     z-index: 100;
     position: fixed;
     width: 100%;
-    top: 0;
+    top: var(--banner-one-height);
     /* background-color: rgb(237, 237, 14); */
-    background-color: #f6f63d;
-    height: 120px;
+    /* background-color: #f6f63d; */
+    background-color: var(--banner-bg-color);
+    height: var(--banner-two-height);
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
     padding-bottom: 20px;
     padding-left: 5vw;
     padding-right: 10vw;
+}
+
+
+.main-header h1,
+.main-header h2 {
+    color: var(--banner-text-color);
 }
 
 .logo h1, .logo h2 {
@@ -56,15 +119,15 @@ body * {
     margin-right: 15px;
 }
 nav a, nav a:link, nav a:hover, nav a:active {
-    color: black;
+    color: var(--banner-text-color);
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
     font-weight: 300;
     border-bottom: solid 2px transparent;
 }
 .main-header nav a:hover {
-    color: #444;
-    border-bottom: solid 2px black;
+    color: var(--banner-text-color);
+    border-bottom: solid 2px var(--banner-text-color);
 }
 
 
@@ -74,7 +137,7 @@ main {
     /* padding-top: 30px; */
     position: relative;
     overflow: hidden;
-    margin-top: 120px;
+    margin-top: var(--main-margin);
 }
 
 .slides-container {
@@ -100,6 +163,23 @@ footer {
     justify-content: center;
     text-align: center;
     min-height: 100px;
+}
+
+.colors {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    position: fixed;
+    top: 172px;
+    left: 0px;
+    width: 33px;
+    height: calc(100vh - 175px);
+}
+
+.colors div {
+    width: 25px;
+    height: 25px;
 }
 
 @media screen and (max-width: 1200px) {
