--- a/css/slides.css
+++ b/css/slides.css
@@ -24,18 +24,20 @@
 
 
 .bg-landing {
-    background-image: url('../images/landing-1.jpeg');
+    /* background-image: url('../images/landing-1.jpeg'); */
+    background-image: url(https://www.ischool.berkeley.edu/sites/default/files/styles/program_hero/public/program_banner_image/mims-program-header-06.jpg);
     width: 100%;
     height: 350px;
     background-size: cover;
     display: flex;
     flex-direction: column;    
-    background-position-y: 120px;
-    background-position-x: center;
+    background-position-y: -85px;
+    /* background-position-x: -55px; */
     background-attachment: fixed;
     padding: 20px 8vw;
     background-repeat: no-repeat;
     justify-content: center;
+    align-items: flex-end;
 }
 
 .bg-landing .info-box {
