--- a/css/slides.css
+++ b/css/slides.css
@@ -25,7 +25,7 @@
 
 .bg-landing {
     /* background-image: url('../images/landing-1.jpeg'); */
-    background-image: url(https://www.ischool.berkeley.edu/sites/default/files/styles/program_hero/public/program_banner_image/mims-program-header-06.jpg);
+    background-image: url('../images/homepage-placeholder.jpg');
     width: 100%;
     height: 350px;
     background-size: cover;
