--- a/templates/curriculum.html
+++ b/templates/curriculum.html
@@ -1,6 +1,6 @@
 <div class="slide-content curriculum-container">
-    <h1>Degree Requirements</h1>
-    <div>
+    <div class="content">
+        <h1>Degree Requirements</h1>
         
         <link rel=alternate type=application/json+oembed
             href="https://csci.unca.edu/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fcsci.unca.edu%2Flearn%2Fcurrent-classes%2F">
@@ -73,11 +73,13 @@
         </div>
     </div>
     <aside>
+        <h3>Curriculum Overview</h3>
         <ul>
-            <li><a href="#">Overview</a></li>
+            <li><a href="#curriculum">Overview</a></li>
             <li><a href="#">Sample Schedules</a></li>
             <li><a href="#courses">Course Schedule</a></li>
-            <li><a href="#student-projects">Capstone Project</a></li>
+            <li><a href="#">About the Capstone</a></li>
+            <li><a href="#student-projects">Student Projects</a></li>
         </ul>
     </aside>
 </div>
