--- a/templates/people.html
+++ b/templates/people.html
@@ -1,4 +1,4 @@
-<div class="slide-content ">
+<div class="slide-content people-section">
     <h1>People</h1>
     <p>Text text text text </p>
 </div>
