--- a/css/areas.css
+++ b/css/areas.css
@@ -1,3 +1,7 @@
+.slide-content.area-section {
+    padding-top: 30px;
+}
+
 .areas {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
