--- a/css/curriculum.css
+++ b/css/curriculum.css
@@ -2,9 +2,36 @@
     display: grid;
     grid-template-columns: auto 300px;
     column-gap: 50px;
+    align-items: start;
 }
 .curriculum-container h1 {
     grid-column: 1 / 3;
+}
+.content {
+    padding-top: 30px;
+}
+aside {
+    background-color: #F0F0F0;
+    padding-top: 85px;
+    padding-bottom: 50px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+aside ul {
+    list-style: none;
+    padding: 0;
+}
+
+aside a, a:link, aside a:hover, aside a:active {
+    color: #444;
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+    /* font-weight: 300; */
+    border-bottom: solid 2px transparent;
+}
+aside a:hover {
+    border-bottom: solid 2px #444;
 }
 /* .curriculum {
     display: grid;
