--- a/templates/areas.html
+++ b/templates/areas.html
@@ -1,4 +1,4 @@
-<div class="slide-content">
+<div class="slide-content area-section">
     <h1>Areas of Computer Science</h1>
     <p>Some text about the areas of computer science that students can learn more about.</p>
     <div class="areas">
