--- a/templates/main.html
+++ b/templates/main.html
@@ -1,28 +1,47 @@
 <div class="bg-landing">
     <div class="info-box">
-        <h1>Welcome</h1> 
+        <h1>Welcome</h1>
         <p>
-            to the CSCI Department. 
+            to the CSCI Department.
             Small classes. Individualized mentoring.
         </p>
     </div>
 </div>
-<div class="slide-content">
+<div class="slide-content main-container">
+    <div class="content">
+        <h1>Who We Are</h1>
+        <p>What can you do with a degree in computer science? The question is, what can’t you do? As software engineers,
+            visualization researchers, web developers, system administrators, college professors, and FBI agents, our
+            alumni
+            are shaping the digital landscape across a variety of fields. Our faculty are passionate about breakthrough
+            technologies in the areas of artificial intelligence, data science, robotics, scientific modeling, virtual
+            reality, and more. Our small classes and our liberal arts focus offer you ample opportunities to work
+            alongside
+            faculty on research projects and combine your computer science studies with other innovative areas, like
+            engineering or new media.
+        </p>
 
-    <h1>Who We Are</h1>
-    <p>What can you do with a degree in computer science? The question is, what can’t you do? As software engineers,
-        visualization researchers, web developers, system administrators, college professors, and FBI agents, our alumni
-        are shaping the digital landscape across a variety of fields. Our faculty are passionate about breakthrough
-        technologies in the areas of artificial intelligence, data science, robotics, scientific modeling, virtual
-        reality, and more. Our small classes and our liberal arts focus offer you ample opportunities to work alongside
-        faculty on research projects and combine your computer science studies with other innovative areas, like
-        engineering or new media.</p>
+        <h1>What You'll Learn</h1>
+        <p>The computer systems concentration prepares students for graduate studies in computer science and for careers
+            in
+            scientific and engineering applications, systems programming, and software development, while the
+            information
+            systems concentration prepares students for careers in commercial programming, systems analysis and design,
+            and
+            database management. Eligible students can receive funding, participate in research and fieldwork, and gain
+            teaching experience through our Atmospheric and Computer Science Exploratory Scholars (ACES) Scholarship
+            Program. Join us at UNC Asheville to start your career in computer science.
+        </p>
+    </div>
+    <aside>
+        <h3>Curriculum Overview</h3>
+        <ul>
+            <li><a href="#curriculum">Overview</a></li>
+            <li><a href="#">Sample Schedules</a></li>
+            <li><a href="#courses">Course Schedule</a></li>
+            <li><a href="#">About the Capstone</a></li>
+            <li><a href="#student-projects">Student Projects</a></li>
+        </ul>
+    </aside>
 
-    <h1>What You'll Learn</h1>
-    <p>The computer systems concentration prepares students for graduate studies in computer science and for careers in
-        scientific and engineering applications, systems programming, and software development, while the information
-        systems concentration prepares students for careers in commercial programming, systems analysis and design, and
-        database management. Eligible students can receive funding, participate in research and fieldwork, and gain
-        teaching experience through our Atmospheric and Computer Science Exploratory Scholars (ACES) Scholarship
-        Program. Join us at UNC Asheville to start your career in computer science. </p>
 </div>
