--- a/css/curriculum.css
+++ b/css/curriculum.css
@@ -1,11 +1,8 @@
 .curriculum-container {
     display: grid;
-    grid-template-columns: auto 300px;
+    grid-template-columns: auto 30vw;
     column-gap: 50px;
     align-items: start;
-}
-.curriculum-container h1 {
-    grid-column: 1 / 3;
 }
 .content {
     padding-top: 30px;
