Making a better course browser

--- a/templates/curriculum.html
+++ b/templates/curriculum.html
@@ -1,81 +1,91 @@
 <div class="slide-content curriculum-container">
     <div class="content">
-        <h1>Degree Requirements</h1>
+        <h1>Degrees & Degree Requirements</h1>
         
-        <link rel=alternate type=application/json+oembed
-            href="https://csci.unca.edu/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fcsci.unca.edu%2Flearn%2Fcurrent-classes%2F">
-        <p>The Computer Science major offers two concentrations: Computer Systems and Information Systems. Both draw
-            from a
-            common core of computer science courses but differ in emphasis. Both concentrations provide the student with
-            preparation for a career in the computer field or the background necessary for studies at the graduate
-            level.
+        <p>
+            The Department of Computer Science offers a <strong>CS Minor</strong> and a <strong>CS Major</strong> 
+            with two different concentrations: Computer Systems and Information Systems.
+        </p>
+        <h2>The Computer Science Major</h2>
+
+        <p>Both the Computer Systems and Information Systems concentrations draw
+            from a common core of computer science courses but differ in emphasis. 
+            Both concentrations provide the student with preparation for a 
+            career in the computer field or the background necessary for studies 
+            at the graduate level.
+        </p>
+    
+        <h3>Computer Systems Concentration</h3> 
+        <p>The <strong>Computer Systems</strong> concentration covers hardware and software design and prepares students
+            for
+            careers in scientific and engineering applications, systems programming, computer architecture design and
+            software development.
+        </p>
+        <p>41 credit hours</p>
+        <ul>
+            <li>13 CSCI core courses</li>
+            <li>2 CSCI electives at the 300-level</li>
+            <li>Calculus I</li>
+            <li>Discrete Math</li>
+            <li>Physics I</li>
+            <li>Physics II</li>
+            <li>2-3 additional math courses</li>
+        </ul>
+        <p>
+            See the UNCA Catalog for <a href="http://catalog.unca.edu/preview_program.php?catoid=19&poid=3662&returnto=1162"
+                target="_blank">more information.</a>
         </p>
 
+        <h3>Information Systems Concentration</h3> 
+        <p>The <strong>Information Systems</strong> concentration focuses on the theory and application of software
+            development, with emphasis on data processing applications, and prepares students for careers in commercial
+            programming, systems analysis and design, and database management.
+        </p>
+        <p>38 credit hours</p>
+        <ul>
+            <li>12 CSCI core courses</li>
+            <li>2 CSCI electives at the 300-level</li>
+            <li>Calculus I</li>
+            <li>Discrete Math</li>
+            <li>Statistics</li>
+        </ul>
+        <p>
+            See the UNCA Catalog for <a href="http://catalog.unca.edu/preview_program.php?catoid=19&poid=3662&returnto=1162"
+                target="_blank">more information.</a>
+        </p>
+        
+        <h2>The Computer Science Minor</h2>
+        <p>The CSCI Minor consists of 21 credit hours. Specifically, students must successfully complete:</p>
+        <ul>
+            <li>
+                4 required courses from the CSCI core: 
+                <span class="tag">CSCI 18X</span>
+                <span class="tag">CSCI 201</span>
+                <span class="tag">CSCI 202</span>
+                <span class="tag">CSCI 235</span>
+            </li>
+            <li>3 CSCI electives at the 300-level</li>
+        </ul>
+        <p>
+            See the UNCA Catalog for <a href="http://catalog.unca.edu/preview_program.php?catoid=19&poid=3662&returnto=1162"
+                target="_blank">more information.</a>
+        </p>
+
+        <h3>[Move Elsewhere] Core Courses</h3> 
         <p>The core courses focus on the fundamentals of computing—data structures, computer architecture, system
             software
             and software engineering, database management and operating systems. Optional courses range from VLSI design
             and
             computer networking to graphical user interfaces and object technology.</p>
 
-        <p>The <strong>Computer Systems</strong> concentration covers hardware and software design and prepares students
-            for
-            careers in scientific and engineering applications, systems programming, computer architecture design and
-            software development.</p>
 
-        <p>The <strong>Information Systems</strong> concentration focuses on the theory and application of software
-            development, with emphasis on data processing applications, and prepares students for careers in commercial
-            programming, systems analysis and design, and database management.</p>
-        <div class="curriculum">
-            <section>
-                <div>
-                    <h2>CSCI Minor</h2>
-                    <p>21 credit hours</p>
-                    <ul>
-                        <li>4 required courses from the CSCI core</li>
-                        <li>3 CSCI electives at the 300-level</li>
-                    </ul>
-                </div>
-                <a class="more" href="http://catalog.unca.edu/preview_program.php?catoid=19&poid=3662&returnto=1162"
-                    target="_blank">More Info</a>
-            </section>
-            <section>
-                <div>
-                    <h2>Information Systems Major</h2>
-                    <p>38 credit hours</p>
-                    <ul>
-                        <li>12 CSCI course courses</li>
-                        <li>2 CSCI electives at the 300-level</li>
-                        <li>Calculus I</li>
-                        <li>Discrete Math</li>
-                        <li>Statistics</li>
-                    </ul>
-                </div>
-                <a class="more" href="http://catalog.unca.edu/preview_program.php?catoid=19&poid=3664&returnto=1162"
-                    target="_blank">More Info</a>
-            </section>
-            <section>
-                <div>
-                    <h2>Computer Systems Major</h2>
-                    <p>41 credit hours</p>
-                    <ul>
-                        <li>13 CSCI course courses</li>
-                        <li>2 CSCI electives at the 300-level</li>
-                        <li>Calculus I</li>
-                        <li>Discrete Math</li>
-                        <li>Physics I</li>
-                        <li>Physics II</li>
-                        <li>2-3 additional math courses</li>
-                    </ul>
-                </div>
-                <a class="more" href="http://catalog.unca.edu/preview_program.php?catoid=19&poid=3663&returnto=1162"
-                    target="_blank">More Info</a>
-            </section>
-        </div>
+
     </div>
     <aside>
-        <h3>Curriculum Overview</h3>
+        <h3>About Our Programs</h3>
         <ul>
             <li><a href="#curriculum">Overview</a></li>
+            <li><a href="#course-map">Curriculum</a></li>
             <li><a href="#">Sample Schedules</a></li>
             <li><a href="#courses">Course Schedule</a></li>
             <li><a href="#">About the Capstone</a></li>
