--- a/css/curriculum.css
+++ b/css/curriculum.css
@@ -7,6 +7,16 @@
 .content {
     padding-top: 30px;
 }
+.course-areas {
+    display: flex;
+    flex-wrap: wrap;
+}
+.tag {
+    border-radius: 6px;
+    margin: 10px 10px 0px 0px;
+    padding: 5px 10px;
+    background-color: #F0F0F0;
+}
 aside {
     background-color: #F0F0F0;
     padding-top: 85px;
@@ -20,7 +30,7 @@ aside ul {
     padding: 0;
 }
 
-aside a, a:link, aside a:hover, aside a:active {
+aside a, aside a:link, aside a:hover, aside a:active {
     color: #444;
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
@@ -30,13 +40,7 @@ aside a, a:link, aside a:hover, aside a:active {
 aside a:hover {
     border-bottom: solid 2px #444;
 }
-/* .curriculum {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 30px;
-    row-gap: 30px;
-    margin-top: 50px;
-} */
+
 .curriculum h2 {
     font-size: 1.2em;
     font-weight: 500;
@@ -44,48 +48,9 @@ aside a:hover {
 .curriculum > section p, .curriculum li {
     font-size: 0.95em;
 }
-/* .curriculum-nav {
-    padding: 15px 0 20px 0;
-}
 
-.curriculum-nav ul {
-    display: flex;
-    justify-content: flex-start;
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-.curriculum-nav li {
-    margin-right: 20px;
-} */
-
-/* .curriculum-nav a, 
-.curriculum-nav a:link, 
-.curriculum-nav a:hover, 
-.curriculum-nav a:active {
-    color: black;
-    text-decoration: none;
-    font-family: 'Poppins', sans-serif;
-    border-bottom: solid 2px transparent;
-    padding: 8px 28px;
-    border-radius: 20px;
-    background-color: #EEE;
-    font-weight: 400;
-    border: solid 2px transparent;
-}
-.curriculum-nav a:hover {
-    color: #444;
-    border: solid 2px black;
-} */
 
 .curriculum > section {
-    /* background: #f9f9f9;
-    padding: 10px 15px 15px 15px;
-    border-radius: 4px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start; */
     margin: 80px 0px;
 }
 
